compiler/testData/diagnostics/tests/declarationChecks/LocalVariableWithNoTypeInformation.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
fun test() {
    val <!VARIABLE_WITH_NO_TYPE_NO_INITIALIZER!>a<!>
}
